@@ -4,6 +4,7 @@ Changelog for hydra
 Release 8.9-dev
 * your patch? :)
 * Fix svn module memory leaks
+* Fix rtsp module potential buffer overflow
 
 
 Release 8.9.1
